[project]
name = "nikke-carena-helper"
version = "2.0.0"
description = "NIKKE 冠军竞技场应援助手"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "dxcam>=0.3.0",
    "comtypes>=1.4.16",
    "keyboard>=0.13.5",
    "psutil>=7.0.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pillow>=11.2.1",
    "pywin32>=310",
    "pyinstaller>=6.14.0",
]
